<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arkvis.orchid.pcalender.view.PeriodCalendarView">

    <CalendarView
        android:id="@+id/periodCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodCalendar" />

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodCalendar" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentDate" />

    <TextView
        android:id="@+id/orchidDayLabel"
        style="@style/CalendarStartControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orchid_day_label"
        app:layout_constraintEnd_toStartOf="@id/middleGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentDate" />

    <ToggleButton
        android:id="@+id/orchidDayToggle"
        style="@style/CalendarEndControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_btn_off"
        android:textOn="@string/toggle_btn_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@id/orchidDayLabel" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orchidDayLabel" />

    <!--    Flow  -->
    <TextView
        android:id="@+id/flowLabel"
        style="@style/CalendarStartControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_label"
        app:layout_constraintEnd_toStartOf="@id/middleGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orchidDayLabel" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerFlowValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@id/flowLabel" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_md"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flowLabel" />

    <!--    Mucus -->
    <TextView
        android:id="@+id/mucusLabel"
        style="@style/CalendarStartControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mucus_label"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/middleGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flowLabel" />

    <TextView
        android:id="@+id/mucusValue"
        style="@style/CalendarEndControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fluid"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@id/mucusLabel" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_md"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mucusLabel" />

    <!--    Temperature  -->
    <TextView
        android:id="@+id/temperatureLabel"
        style="@style/CalendarStartControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_label"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/middleGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mucusLabel" />

    <TextView
        android:id="@+id/temperatureValue"
        style="@style/CalendarEndControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="F"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@id/temperatureLabel" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_md"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureLabel" />

    <!--    Ovulation  -->
    <TextView
        android:id="@+id/ovulationLabel"
        style="@style/CalendarStartControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ovulation_label"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/middleGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureLabel" />


    <ToggleButton
        android:id="@+id/ovulationToggle"
        style="@style/CalendarEndControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_btn_off"
        android:textOn="@string/toggle_btn_on"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@id/ovulationLabel" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/space_md"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ovulationLabel" />

    <!--    Fertility  -->
    <TextView
        android:id="@+id/fertilityLabel"
        style="@style/CalendarStartControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fertility_label"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/middleGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ovulationLabel" />

    <ToggleButton
        android:id="@+id/fertilityToggle"
        style="@style/CalendarEndControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_btn_off"
        android:textOn="@string/toggle_btn_on"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@id/fertilityLabel" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fertilityLabel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_xs"
        android:layout_marginBottom="@dimen/space_xs"
        android:contentDescription="@string/fab"
        app:borderWidth="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>